fix: normalize migration baseline checksum